app/styles/modules/start-page-hero.css
.start-page-hero {
	/* Light */
	--_image-brightness-filter-light: brightness(100%);

	/* Dark */
	--_image-brightness-filter-dark: brightness(85%);

	/* General */
	--_min-height: 600px;
	--_padding: var(--size-10) var(--size-6);
	
	--_image-url: ;
	--_image-brightness-filter: var(--_image-brightness-filter-light);
	--_image-placeholder-color: rgba(216	214	213);

	--_title-color: var(--text-1);
	--_text-color: var(--text-2);

	--_title-font-size: var(--font-size-fluid-3);
	--_svg-size: var(--font-size-1);
}

@media (min-width: 768px) {
	.start-page-hero {
		--_min-height: 750px;
		--_padding: var(--size-10);

		--_title-font-size: clamp(2.5rem,4vw,3.5rem);
		--_svg-size: var(--font-size-2);
	}
}

html[color-scheme="dark"] .start-page-hero {
	--_image-brightness-filter: var(--_image-brightness-filter-dark);
	--frost-color: var(--frost-color-dark);
}

section.start-page-hero {
	--link: var(--indigo-7);
	--link-visited: var(--grape-7);

  position: relative;
  max-width: var(--layout-max-width);
	padding: 0;
}

.start-page-hero > div {
	--link: var(--indigo-7);
	--link-visited: var(--grape-7);

  position: relative;
	display: flex;
	min-height: var(--_min-height);
	border-radius: var(--radius-conditional-4);
	padding: var(--_padding);
	overflow: hidden;
}

.start-page-hero > div img {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	filter: var(--_image-brightness-filter);
}

.start-page-hero-content {
  position: relative;
	z-index: 1;
	display: grid;
	grid-template-rows: auto auto 1fr;
	gap: var(--size-5);
	flex: 1;
	justify-content: center;
}

.start-page-hero-title {
	color: var(--_title-color);
	font-size: var(--_title-font-size);
}

.start-page-hero-subtitle {
	font-weight: var(--font-weight-3);
	font-size: var(--size-fluid-2);
	max-inline-size: var(--size-fluid-10);
}

.start-page-hero-subtitle,
.start-page-hero-contact-list h2, 
.start-page-hero-contact-list h3, 
.start-page-hero-contact-list p,
.start-page-hero-contact-list hr {
	color: var(--_text-color);
}

.start-page-hero-contact-list {
	/* frost-box */
	backdrop-filter: var(--frost-blur);
	background-color: var(--frost-color);
	
	--contact-list-radius: var(--radius-3);
	--contact-list-headline-size: var(--font-size-fluid-0);

	position: relative;
	padding: var(--size-4) var(--size-6);
	margin-block-start: var(--size-10);
	border-radius: 0 var(--contact-list-radius) var(--contact-list-radius);
	align-self: flex-end;

	display: flex;
	justify-content: center;
  width: max-content;
}

.start-page-hero-contact-list h2 {
	/* frost-box */
	backdrop-filter: var(--frost-blur);
	background-color: var(--frost-color);

	position: absolute;
	left: 0;
	bottom: 100%;
	font-size: var(--contact-list-headline-size);
	padding: calc(var(--size-4) / 2) var(--size-6) calc(var(--size-4) / 2) var(--size-6);
	border-radius: var(--contact-list-radius) var(--contact-list-radius) 0 0;
	text-transform: uppercase;
	font-weight: var(--font-weight-4);
	letter-spacing: var(--font-letterspacing-4);
}

.start-page-hero-contact-list h3, .start-page-hero-contact-list p, .start-page-hero-contact-list svg {
	font-size: var(--contact-list-headline-size);
}

.start-page-hero-contact-list h3 + address {
	margin-block-start: var(--size-2)
}

.start-page-hero-contact-list button {
	font-weight: var(--font-weight-3);
}

.start-page-hero-contact-list button, .start-page-hero-contact-list hr {
	width: 100%;
	align-self: center;
}

.start-page-hero-contact-list svg {
	inline-size: var(--_svg-size);
}

@media (min-width: 768px) {
	.start-page-hero-content {
		justify-content: unset;
	}
	
	.start-page-hero-contact-list > div {
		display: flex;
	}
	
	.start-page-hero-contact-list button, .start-page-hero-contact-list hr {
		width: unset;
	}
	.start-page-hero-contact-list hr {
		writing-mode: vertical-rl;
		height: inherit;
		min-height: var(--size-8);
	}
}

